# input-bridge

./: .gitignore  LICENSE  Pipfile  README.md  config.yml  setup.cfg  setup.py
examples/: control_mac_with_killamix_mini.py  mac_config.yml
src/input_bridge/: __init__.py  exceptions.py
src/input_bridge/bridges/: alsa.py  keyboard.py  mac_osa.py  midi.py
src/input_bridge/devices/: killamix_mini.py
src/input_bridge/handlers/: midi_to_alsa.py  midi_to_keyboard.py  midi_to_mac_osa.py
src/input_bridge/scripts/: input_bridge.py
