[metadata]
name = input-bridge
version = 0.1.0
description = Bridge for managing computer inputs

[options]
install_requires =
	keyboard
	pygame

[options.extras_require]
mac =
	osascript

package_dir =
	=src
packages = find:

[options.packages.find]
where = src

[options.entry_points]

[flake8]
max-complexity = 7
max-line-length = 100

[tool:pytest]
python_files = test/**/*.py
